--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"peerDependencies": {
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"motion": "10.16.2",
 		"typescript": "^5.0.4"
 	},
 	"devDependencies": {
