--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"target": "ESNext",
 		"declaration": true,
 		"outDir": "./dist",
-		"lib": ["ESNext"]
+		"lib": ["ESNext", "DOM"]
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist"]
