--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,21 +1,30 @@
 name: Release
+
 on:
     push:
-        branches:
-            - "main"
+        branches: ["main"]
+
 jobs:
     build:
+        name: Build and release
+        timeout-minutes: 15
         runs-on: ubuntu-latest
-steps:
-    - uses: actions/checkout@v2
-      with:
-          persist-credentials: false
-    - uses: actions/setup-node@v1
-      with:
-          node-version: "18.x"
-    - run: pnpm install
-    - run: pnpm build
-    - run: pnpm semantic-release
-      env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        env:
+            GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+        steps:
+            - name: Check out code
+                uses: actions/checkout@v2
+                with:
+                    persist-credentials: false
+            - name: Setup Node.js
+                uses: actions/setup-node@v1
+                with:
+                    node-version: "18.x"
+            - name: Run install
+                run: pnpm install
+            - name: Run build
+                run: pnpm build
+            - name: Release version
+                run: pnpm semantic-release
