--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,16 +15,20 @@ jobs:
 
         steps:
             - name: Check out code
-                uses: actions/checkout@v2
-                with:
-                    persist-credentials: false
-            - name: Setup Node.js
-                uses: actions/setup-node@v1
-                with:
-                    node-version: "18.x"
+              uses: actions/checkout@v3
+              with:
+                  fetch-depth: 2
+                  persist-credentials: false
+
+            - uses: pnpm/action-setup@v2.0.1
+              with:
+                  version: 6.32.2
+
             - name: Run install
-                run: pnpm install
+              run: pnpm install
+
             - name: Run build
-                run: pnpm build
+              run: pnpm build
+
             - name: Release version
-                run: pnpm semantic-release
+              run: pnpm semantic-release
