--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
 		"publish": "npm publish"
 	},
 	"peerDependencies": {
+		"motion": "10.16.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"motion": "10.16.2",
 		"typescript": "^5.0.4"
 	},
 	"devDependencies": {
@@ -35,6 +35,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.7",
 		"@typescript-eslint/parser": "^5.59.7",
 		"eslint": "^8.41.0",
+		"eslint-plugin-react": "^7.32.2",
 		"husky": "^8.0.3",
 		"semantic-release": "^21.0.2"
 	},
