--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
 		"eslint": "^8.41.0",
 		"eslint-plugin-react": "^7.32.2",
 		"husky": "^8.0.3",
-		"semantic-release": "^21.0.2"
+		"semantic-release": "^21.0.2",
+		"motion": "10.16.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"typescript": "^5.0.4"
 	},
 	"commitlint": {
 		"extends": [
