--- a/package.json
+++ b/package.json
@@ -55,6 +55,20 @@
 		}
 	},
 	"release": {
+		"branches": [
+			"+([0-9])?(.{+([0-9]),x}).x",
+			"main",
+			"next",
+			"next-major",
+			{
+				"name": "beta",
+				"prerelease": true
+			},
+			{
+				"name": "alpha",
+				"prerelease": true
+			}
+		],
 		"plugins": [
 			"@semantic-release/release-notes-generator",
 			"@semantic-release/changelog",
