--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
 	"scripts": {
 		"build": "pnpm run lint && tsc",
 		"lint": "eslint --ignore-path .gitignore . --ext ts",
-		"publish": "npm publish",
-		"dev-prepare": "npx husky install"
+		"publish": "npm publish"
 	},
 	"peerDependencies": {
 		"motion": "10.16.2",
@@ -27,54 +26,15 @@
 		"typescript": "^5.0.4"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^17.6.3",
-		"@commitlint/config-conventional": "^17.6.3",
-		"@semantic-release/changelog": "^6.0.3",
-		"@semantic-release/git": "^10.0.1",
 		"@types/node": "^20.2.4",
 		"@types/react": "^18.2.7",
 		"@typescript-eslint/eslint-plugin": "^5.59.7",
 		"@typescript-eslint/parser": "^5.59.7",
 		"eslint": "^8.41.0",
 		"eslint-plugin-react": "^7.32.2",
-		"husky": "^8.0.3",
-		"semantic-release": "^21.0.2",
 		"motion": "10.16.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"typescript": "^5.0.4"
-	},
-	"commitlint": {
-		"extends": [
-			"@commitlint/config-conventional"
-		]
-	},
-	"husky": {
-		"hooks": {
-			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-		}
-	},
-	"release": {
-		"branches": [
-			"+([0-9])?(.{+([0-9]),x}).x",
-			"main",
-			"next",
-			"next-major",
-			{
-				"name": "beta",
-				"prerelease": true
-			},
-			{
-				"name": "alpha",
-				"prerelease": true
-			}
-		],
-		"plugins": [
-			"@semantic-release/release-notes-generator",
-			"@semantic-release/changelog",
-			"@semantic-release/npm",
-			"@semantic-release/git",
-			"@semantic-release/github"
-		]
 	}
 }
