--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@glitchtech-dev/react-motion",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"description": "A simple wrapper of Motion for React.",
 	"main": "dist/index.js",
 	"keywords": [
@@ -15,9 +15,10 @@
 		"/dist"
 	],
 	"scripts": {
-		"build": "pnpm run lint && tsc",
+		"build": "pnpm run clean && pnpm run lint && tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.types.json",
 		"lint": "eslint --ignore-path .gitignore . --ext ts",
-		"package:publish": "standard-version && npm publish --access public"
+		"package:publish": "pnpm run clean && pnpm run lint && tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.types.json && standard-version && npm publish --access public",
+		"clean": "rm -rf ./dist"
 	},
 	"peerDependencies": {
 		"motion": "10.16.2",
@@ -28,6 +29,7 @@
 	"devDependencies": {
 		"@types/node": "^20.2.5",
 		"@types/react": "^18.2.7",
+		"@types/react-dom": "^18.2.4",
 		"@typescript-eslint/eslint-plugin": "^5.59.8",
 		"@typescript-eslint/parser": "^5.59.8",
 		"eslint": "^8.41.0",
