fix: reconfig of package structure. now supports both cjs + esm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,15 @@
 {
 	"compilerOptions": {
-		"module": "CommonJS",
 		"target": "ESNext",
 		"declaration": true,
 		"outDir": "./dist",
 		"lib": ["ESNext", "DOM"],
 		"baseUrl": "./",
 		"checkJs": true,
-		"jsx": "preserve",
-		"jsxFactory": "React.createElement",
-		"jsxFragmentFactory": "React.Fragment",
-		"jsxImportSource": "react"
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": false,
+		"jsx": "react"
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist"]
