--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
 	"license": "MIT",
 	"types": "dist/index.d.ts",
 	"files": [
-		"/dist",
-		"index.js",
-		"index.cjs"
+		"/dist"
 	],
 	"scripts": {
 		"build": "pnpm run clean && pnpm run lint && tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.types.json",
