--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@glitchtech-dev/react-motion",
 	"version": "1.1.9",
 	"description": "A simple wrapper of Motion for React.",
-	"main": "dist/index.js",
+	"main": "dist/cjs/index.js",
 	"keywords": [
 		"motion",
 		"react",
