--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,7 +1,8 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"outDir": "./dist/cjs",
-		"module": "commonjs"
+		"module": "commonjs",
+		"target": "ES6",
+		"outDir": "./dist/cjs"
 	}
 }
