--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,7 +1,8 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"outDir": "./dist/esm",
-		"module": "esnext"
+		"module": "esnext",
+		"target": "esnext",
+		"outDir": "./dist/esm"
 	}
 }
