--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "@glitchtech-dev/react-motion",
-	"version": "1.1.10",
+	"version": "1.1.11",
 	"description": "A simple wrapper of Motion for React.",
-	"main": "dist/cjs/index.js",
-	"module": "dist/esm/index.js",
+	"main": "./dist/cjs/index.js",
+	"module": "./dist/esm/index.js",
 	"exports": {
 		".": {
-			"import": "./dist/sem/index.js",
+			"import": "./dist/esm/index.js",
 			"require": "./dist/cjs/index.js"
 		}
 	},
@@ -19,7 +19,7 @@
 	"license": "MIT",
 	"types": "dist/index.d.ts",
 	"files": [
-		"/dist"
+		"./dist"
 	],
 	"scripts": {
 		"build": "pnpm run lint && tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.types.json",
