--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
 		"./dist"
 	],
 	"scripts": {
-		"build": "pnpm run lint && tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.types.json",
+		"build": "pnpm run lint && tsc -b ./tsconfig.cjs.json ./tsconfig.types.json",
 		"lint": "eslint --ignore-path .gitignore . --ext ts",
-		"package:publish": "pnpm run lint && tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.types.json && standard-version && npm publish --access public"
+		"package:publish": "pnpm run lint && tsc -b ./tsconfig.cjs.json ./tsconfig.types.json && standard-version && npm publish --access public"
 	},
 	"peerDependencies": {
 		"motion": "10.16.2",
