--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@
 		"sourceType": "module",
 		"ecmaVersion": "latest"
 	},
-	"ignorePatterns": ["node_modules/"],
+	"ignorePatterns": ["node_modules/", "index.cjs"],
 	"settings": {
 		"react": {
 			"version": "detect"
