--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
 	"name": "@glitchtech-dev/react-motion",
 	"version": "1.1.11",
 	"description": "A simple wrapper of Motion for React.",
+	"type": "commonjs",
 	"main": "./dist/cjs/index.js",
 	"module": "./dist/esm/index.js",
 	"exports": {
 		".": {
-			"import": "./dist/esm/index.js",
+			"import": "./dist/cjs/index.js",
 			"require": "./dist/cjs/index.js"
 		}
 	},
