--- a/examples/qwik-react/package.json
+++ b/examples/qwik-react/package.json
@@ -2,7 +2,7 @@
   "name": "qwik-jkinsight",
   "description": "A very Qwik website right?",
   "private": true,
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "build": "qwik build",
     "build.client": "vite build",
