--- a/examples/qwik-react/tsconfig.json
+++ b/examples/qwik-react/tsconfig.json
@@ -22,5 +22,5 @@
     }
   },
   "files": ["./.eslintrc.cjs"],
-  "include": ["src", "./*.d.ts", "./*.config.cjs"]
+  "include": ["src", "./*.d.ts", "./*.config.cjs", "./vite.config.ts"]
 }
