--- a/packages/react-motion/tsconfig.json
+++ b/packages/react-motion/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"allowSyntheticDefaultImports": true,
-		"baseUrl": "./",
+		"baseUrl": ".",
 		"declaration": true,
 		"esModuleInterop": true,
 		"inlineSourceMap": false,
@@ -20,6 +20,6 @@
 		"jsx": "react"
 	},
 	"compileOnSave": true,
-	"exclude": ["node_modules", "dist"],
-	"include": ["src", "index.d.ts"]
+	"include": ["src", "tsup.config.ts", "test"],
+	"exclude": ["dist"]
 }
