--- a/examples/qwik-react/.gitignore
+++ b/examples/qwik-react/.gitignore
@@ -13,6 +13,7 @@ node_modules
 .mf
 .rollup.cache
 tsconfig.tsbuildinfo
+tmp
 
 # Logs
 logs
@@ -40,6 +41,4 @@ lerna-debug.log*
 !.yarn/releases
 
 # Vercel
-.vercel
-
 .vercel
