--- a/packages/react-motion/tsconfig.json
+++ b/packages/react-motion/tsconfig.json
@@ -1,25 +1,22 @@
 {
+	"$schema": "https://json.schemastore.org/tsconfig",
 	"compilerOptions": {
-		"allowJs": true,
-		"allowSyntheticDefaultImports": true,
-		"baseUrl": ".",
+		"composite": false,
 		"declaration": true,
+		"declarationMap": true,
 		"esModuleInterop": true,
-		"inlineSourceMap": false,
-		"lib": ["esnext", "DOM"],
-		"listEmittedFiles": false,
-		"listFiles": false,
+		"forceConsistentCasingInFileNames": true,
+		"inlineSources": false,
+		"isolatedModules": true,
 		"moduleResolution": "node",
-		"noFallthroughCasesInSwitch": true,
-		"pretty": true,
-		"resolveJsonModule": true,
-		"rootDir": "src",
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
+		"preserveWatchOutput": true,
 		"skipLibCheck": true,
 		"strict": true,
-		"traceResolution": false,
 		"jsx": "react"
 	},
 	"compileOnSave": true,
 	"include": ["src", "tsup.config.ts", "test"],
-	"exclude": ["dist"]
+	"exclude": ["node_modules"]
 }
